--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ firebase-admin==6.5.0
 google-cloud-firestore==2.16.0
 google-cloud-storage==2.18.0
 stripe==10.12.0
+
+# Testing (optional, for development)
+pytest>=8.0.0
