docs: fix firebase project alias to prevent deploy mixups

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "realtime-translator-pwa"
+    "default": "realtime-translator-pwa",
+    "prod": "realtime-translator-pwa-483710"
   }
 }
