chore: default Cloud Build region to asia-northeast1

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -48,7 +48,7 @@ steps:
 
 substitutions:
   _SERVICE_NAME: realtime-translator-api
-  _REGION: us-central1
+  _REGION: asia-northeast1
   _REPO_NAME: realtime-translator
   _ENV: production
 
