--- a/.firebaserc
+++ b/.firebaserc
@@ -3,5 +3,18 @@
     "default": "realtime-translator-pwa-483710",
     "prod": "realtime-translator-pwa-483710",
     "legacy": "realtime-translator-pwa"
-  }
+  },
+  "targets": {
+    "realtime-translator-pwa-483710": {
+      "hosting": {
+        "app": [
+          "realtime-translator-pwa-483710"
+        ],
+        "marketing": [
+          "lingoflow-marketing"
+        ]
+      }
+    }
+  },
+  "etags": {}
 }
