--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "scripts": {
     "sync": "./scripts/sync_public.sh",
+    "sync:marketing": "./scripts/sync_marketing.sh",
     "check-sync": "./scripts/check_public_sync.sh",
-    "deploy:hosting": "./scripts/sync_public.sh && ./scripts/check_public_sync.sh && firebase deploy --only hosting --project realtime-translator-pwa-483710"
+    "check-sync:marketing": "./scripts/check_marketing_sync.sh",
+    "deploy:app": "./scripts/sync_public.sh && ./scripts/check_public_sync.sh && firebase deploy --only hosting:app --project realtime-translator-pwa-483710",
+    "deploy:marketing": "./scripts/sync_marketing.sh && ./scripts/check_marketing_sync.sh && firebase deploy --only hosting:marketing --project realtime-translator-pwa-483710",
+    "deploy:hosting": "./scripts/sync_public.sh && ./scripts/check_public_sync.sh && ./scripts/sync_marketing.sh && ./scripts/check_marketing_sync.sh && firebase deploy --only hosting --project realtime-translator-pwa-483710"
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0"
