--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "deploy:hosting": "./scripts/sync_public.sh && ./scripts/check_public_sync.sh && ./scripts/sync_marketing.sh && ./scripts/check_marketing_sync.sh && firebase deploy --only hosting --project realtime-translator-pwa-483710"
   },
   "devDependencies": {
-    "@playwright/test": "^1.57.0"
+    "@playwright/test": "^1.57.0",
+    "firebase-tools": "^15.5.1"
   }
 }
